fix: Make Players card dragable, by adding css z-index

--- a/src/components/TacticsBoard/Pitch/Background/Background.module.css
+++ b/src/components/TacticsBoard/Pitch/Background/Background.module.css
@@ -22,12 +22,6 @@
   background-color: var(--green-2);
 }
 
-.dd {
-  --coo: rgb(40, 110, 40);
-  border-left: 1px solid var(--coo);
-  border-top: 1px solid var(--coo);
-}
-
 .pitchDesign {
   position: absolute;
   top: 0;
